<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/signupintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/eater"
        android:text="@string/log_in"
        android:textColor="@color/goldish"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imagesun"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/sun"
        android:layout_below="@id/signupintext"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:id="@+id/cardlayout"

        android:gravity="center_horizontal"
        android:layout_below="@id/imagesun"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="293dp"
            android:layout_height="310dp"
            app:cardElevation="10dp"
            android:backgroundTint="@color/circlecolor"

            app:cardCornerRadius="45dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone_number"
                    android:fontFamily="serif-monospace"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="0dp"
                    android:inputType="number"
                    android:hint="@string/myphone"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:background="@drawable/circle"/>

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="9dp"

                    android:fontFamily="serif-monospace"
                    android:text="@string/your_password"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="6dp"
                    android:inputType="textWebPassword"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/examplepass"
                    android:textStyle="italic"
                    android:background="@drawable/circle"/>
                <Button
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/circle"
                    android:layout_marginTop="15dp"

                    android:onClick="login"
                    android:text="@string/log_inbutton"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account_sign_in"
                    android:textColor="@color/white"
                    android:layout_marginStart="22dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:onClick="register"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="serif-monospace"
                    android:onClick="Forgotpassword"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:src="@drawable/google"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/arizonia"
                android:text="@string/sign_up_with_google"
                android:textColor="@color/gold"
                android:textSize="21sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="85dp"
                android:src="@drawable/welding"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_marginStart="5dp"
                android:layout_height="85dp"
                android:src="@drawable/barber"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_marginStart="5dp"
                android:layout_height="85dp"
                android:src="@drawable/vegetable"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="85dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/plumbing"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_marginStart="5dp"
                android:layout_height="85dp"
                android:src="@drawable/laundry"/>
        </LinearLayout>




    </LinearLayout>

</RelativeLayout>